--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a class="ar-object" id="centrifuge" href="#">Centrifuge</a>
             <a class="ar-object" id="tipbox" href="#">Tip Box</a>
-            <a class="ar-object" id="untitled" href="#">Centrifuge Test</a>
-            <a class="ar-object" id="4" href="#">Item 4</a>
+            <a class="ar-object" id="pipette" href="#">Pipette</a>
+            <a class="ar-object" id="untitled" href="#">Testing</a>
         </div>
 
         <div id="scene-container" style="position: fixed;"></div>
